--- a/SocialMediaApp/app/src/main/res/layout/activity_user_profile.xml
+++ b/SocialMediaApp/app/src/main/res/layout/activity_user_profile.xml
@@ -526,7 +526,7 @@
                         android:layout_marginTop="20dp"
                         android:text="Set your home location as current location"
                         android:layout_below="@+id/texthome"
-
+                        android:onClick="itemClicked"
                         android:layout_marginBottom="200dp"
 
                         />
@@ -537,6 +537,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="390dp"
                         android:layout_marginTop="70dp"
+
                         android:layout_below="@+id/texthome">
 
 
@@ -648,9 +649,9 @@
                         android:id="@+id/profile_update"
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/linear_current"
+                        android:layout_below="@+id/linear_current"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginBottom="22dp"
+                        android:layout_marginTop="15dp"
                         android:background="@color/appBlue"
                         android:fontFamily="@font/pt_sans_web_regular"
                         android:text="Submit"
