--- a/SocialMediaApp/app/src/main/res/layout/activityitems.xml
+++ b/SocialMediaApp/app/src/main/res/layout/activityitems.xml
@@ -1,40 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardMaxElevation="5dp"
+    card_view:cardElevation="5dp"
+    card_view:cardBackgroundColor="@color/colorPrimary"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardPreventCornerOverlap="false"
+    >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#fff"
+        android:orientation="vertical">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="290dp">
 
 
         <TextView
-            android:id="@+id/status"
+            android:id="@+id/share_post"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_marginStart="46dp"
             android:layout_marginTop="29dp"
-            android:text="TextView" />
+            android:fontFamily="@font/pt_sans_web_regular"
+            android:text="pooja gupta commented on his own status" />
 
         <TextView
-            android:id="@+id/time"
+            android:id="@+id/created_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/status"
-            android:layout_below="@+id/status"
-            android:layout_marginTop="31dp"
+            android:layout_alignStart="@+id/share_post"
+            android:layout_below="@+id/share_post"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/pt_sans_web_regular"
             android:text="TextView" />
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/textView7"
-            android:layout_below="@+id/textView7"
-            android:layout_marginTop="32dp"
-            android:text="TextView" />
+
+        <RelativeLayout
+            android:id="@+id/relativedata"
+            android:layout_width="match_parent"
+            android:layout_height="210dp"
+            android:layout_marginTop="40dp"
+            android:layout_below="@+id/share_post">
+
+            <RelativeLayout
+                android:id="@+id/videorelative"
+                android:layout_width="fill_parent"
+                android:layout_height="150dp"
+                android:layout_marginTop="60dp"
+                android:visibility="invisible"
+
+                >
+
+                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+                    android:id="@+id/exo_player_view"
+                    android:layout_width="fill_parent"
+                    android:layout_height="match_parent">
+
+                </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/audiorelative"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="60dp"
+                android:visibility="invisible">
+
+                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+                    android:id="@+id/exo_player_view_audio"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/relative_image"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginTop="50dp"
+                android:visibility="invisible"
+                >
+
+                <ImageView
+                    android:id="@+id/post_image"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                     />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="45dp"
+                android:layout_marginTop="28dp"
+                android:text="TextView" />
+
+
+
+
+        </RelativeLayout>
+
     </RelativeLayout>
 
 </LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
