--- a/SocialMediaApp/app/src/main/res/layout/postlistitems.xml
+++ b/SocialMediaApp/app/src/main/res/layout/postlistitems.xml
@@ -32,10 +32,9 @@
 
                 <ImageView
                     android:id="@+id/post_image"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="center"
                     android:visibility="invisible" />
 
                 <RelativeLayout
