--- a/SocialMediaApp/app/src/main/res/values/styles.xml
+++ b/SocialMediaApp/app/src/main/res/values/styles.xml
@@ -27,7 +27,65 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">22sp</item>
-    </style>
+
+
+        <!-- Base application theme. -->
+
+        </style>
+
+        <style name="AppCompat.Black.NoActionBar" parent="Theme.AppCompat.NoActionBar">
+            <item name="android:colorBackground">@android:color/background_dark</item>
+            <item name="android:windowBackground">@android:color/background_dark</item>
+        </style>
+
+        <style name="AppCompat.NoActionBar" parent="AppTheme">
+            <item name="android:windowActionBar">false</item>
+            <item name="android:windowNoTitle">true</item>
+            <item name="windowActionBar">false</item>
+            <item name="windowNoTitle">true</item>
+        </style>
+
+        <style name="TextAppearance.Title" parent="@android:style/TextAppearance">
+            <item name="android:textSize">18sp</item>
+            <item name="android:textColor">@color/primary_dark_text</item>
+        </style>
+
+        <style name="TextAppearance.Title.White" parent="@android:style/TextAppearance">
+            <item name="android:textSize">18sp</item>
+            <item name="android:textColor">@android:color/white</item>
+        </style>
+
+        <style name="TextAppearance.Toolbar.Expanded" parent="TextAppearance.Design.CollapsingToolbar.Expanded">
+            <item name="android:textSize">24sp</item>
+        </style>
+
+        <style name="TextAppearance.Second" parent="@android:style/TextAppearance">
+            <item name="android:textSize">14sp</item>
+            <item name="android:textColor">@color/secondary_text</item>
+        </style>
+
+        <style name="TextAppearance.Second.Light" parent="@android:style/TextAppearance">
+            <item name="android:textSize">14sp</item>
+            <item name="android:textColor">@color/secondary_light</item>
+        </style>
+
+        <style name="TextAppearance.Highlight" parent="@android:style/TextAppearance">
+            <item name="android:textSize">14sp</item>
+            <item name="android:textColor">@color/highlight_text</item>
+        </style>
+
+        <style name="TextAppearance.Second.Dark" parent="@android:style/TextAppearance">
+            <item name="android:textSize">14sp</item>
+            <item name="android:textColor">@color/primary_dark_text</item>
+        </style>
+
+        <style name="TextAppearance.MainTitle" parent="@android:style/TextAppearance">
+            <item name="android:textSize">32sp</item>
+            <item name="android:textColor">@android:color/white</item>
+        </style>
+
+
+
 
 
 </resources>
