--- a/SocialMediaApp/app/src/main/res/layout/activity_post.xml
+++ b/SocialMediaApp/app/src/main/res/layout/activity_post.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <RelativeLayout
@@ -14,17 +14,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appBarLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <!--<android.support.design.widget.AppBarLayout-->
+            <!--android:id="@+id/appBarLayout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
 
-            <include
-                android:id="@+id/main_page_toolbar"
-                layout="@layout/home_toolbar" />
+            <!--<include-->
+                <!--android:id="@+id/main_page_toolbar"-->
+                <!--layout="@layout/home_toolbar" />-->
 
 
-        </android.support.design.widget.AppBarLayout>
+        <!--</android.support.design.widget.AppBarLayout>-->
 
 
         <!--<RelativeLayout-->
@@ -36,47 +36,47 @@
 
         <!--</RelativeLayout>-->
 
-        <LinearLayout
-            android:id="@+id/linear_tabs"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="7dp"
-            android:orientation="horizontal"
-            android:layout_below="@+id/appBarLayout"
-            android:weightSum="3">
+        <!--<LinearLayout-->
+            <!--android:id="@+id/linear_tabs"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="8dp"-->
+            <!--android:layout_marginTop="7dp"-->
+            <!--android:orientation="horizontal"-->
+            <!--android:layout_below="@+id/appBarLayout"-->
+            <!--android:weightSum="3">-->
 
-            <Button
-                android:id="@+id/button_country"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_marginLeft="15dp"
-                android:layout_weight="0.8"
-                android:background="@drawable/button_background"
-                android:text="COUNTRY"
-                android:textColor="@color/white" />
+            <!--<Button-->
+                <!--android:id="@+id/button_country"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:layout_marginLeft="15dp"-->
+                <!--android:layout_weight="0.8"-->
+                <!--android:background="@drawable/button_background"-->
+                <!--android:text="COUNTRY"-->
+                <!--android:textColor="@color/white" />-->
 
-            <Button
-                android:id="@+id/button_state"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="0.8"
-                android:background="@drawable/button_background"
-                android:text="STATE"
-                android:textColor="@color/white" />
+            <!--<Button-->
+                <!--android:id="@+id/button_state"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:layout_weight="0.8"-->
+                <!--android:background="@drawable/button_background"-->
+                <!--android:text="STATE"-->
+                <!--android:textColor="@color/white" />-->
 
-            <Button
-                android:id="@+id/button_district"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="0.8"
-                android:background="@drawable/button_background"
-                android:text="DISTRICT"
-                android:textColor="@color/white" />
+            <!--<Button-->
+                <!--android:id="@+id/button_district"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:layout_marginLeft="10dp"-->
+                <!--android:layout_weight="0.8"-->
+                <!--android:background="@drawable/button_background"-->
+                <!--android:text="DISTRICT"-->
+                <!--android:textColor="@color/white" />-->
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -108,7 +108,8 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
-                    android:layout_gravity="center" />
+                    android:layout_gravity="center"
+                    style="@style/RedAccent"/>
 
             <!--</android.support.v4.widget.SwipeRefreshLayout>-->
 
@@ -118,15 +119,15 @@
     </RelativeLayout>
 
 
-    <ListView
-        android:id="@+id/left_drawer"
-        android:layout_width="240dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#fff"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
+    <!--<ListView-->
+        <!--android:id="@+id/left_drawer"-->
+        <!--android:layout_width="240dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="start"-->
+        <!--android:background="#fff"-->
+        <!--android:choiceMode="singleChoice"-->
+        <!--android:divider="@android:color/transparent"-->
 
-        />
+        <!--/>-->
 
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
