--- a/SocialMediaApp/app/src/main/res/layout/activity_state_post.xml
+++ b/SocialMediaApp/app/src/main/res/layout/activity_state_post.xml
@@ -11,17 +11,17 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/appBarLayout">
+        <!--<android.support.design.widget.AppBarLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/appBarLayout">-->
 
-            <include layout="@layout/app_bar_layout"
-                android:id="@+id/main_page_toolbar" />
+            <!--<include layout="@layout/app_bar_layout"-->
+                <!--android:id="@+id/main_page_toolbar" />-->
 
 
 
-        </android.support.design.widget.AppBarLayout>
+        <!--</android.support.design.widget.AppBarLayout>-->
 
 
         <RelativeLayout
