--- a/SocialMediaApp/app/src/main/res/layout/item_progress.xml
+++ b/SocialMediaApp/app/src/main/res/layout/item_progress.xml
@@ -7,6 +7,7 @@
         android:id="@+id/loadmore_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:theme="@style/RedAccent"/>
 
 </FrameLayout>
