--- a/SocialMediaApp/app/src/main/res/values/colors.xml
+++ b/SocialMediaApp/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0076bc</color>
-    <color name="colorPrimaryDark">#0076bc</color>
-    <color name="colorAccent">#0076bc</color>
+    <color name="colorPrimary">#5bacdf</color>
+    <color name="colorPrimaryDark">#156bc1</color>
+    <color name="colorAccent">#ffffff</color>
 
     <color name="white">#ffffff</color>
     <color name="blue">#256487</color>
