--- a/SocialMediaApp/app/src/main/res/layout/activity_user_profile.xml
+++ b/SocialMediaApp/app/src/main/res/layout/activity_user_profile.xml
@@ -29,6 +29,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
+            android:descendantFocusability="beforeDescendants"
+
             >
 
             <LinearLayout
