--- a/SocialMediaApp/app/src/main/res/layout/form_layout.xml
+++ b/SocialMediaApp/app/src/main/res/layout/form_layout.xml
@@ -177,7 +177,7 @@
                 android:layout_alignStart="@+id/gallery_upload"
                 android:layout_below="@+id/gallery_upload"
                 android:layout_marginTop="10dp"
-                android:visibility="invisible"
+android:visibility="gone"
                 android:text="TextView" />
 
             <ImageView
@@ -187,7 +187,7 @@
                 android:layout_alignBottom="@+id/selected_file"
                 android:layout_marginLeft="50dp"
                 android:layout_marginTop="5dp"
-                android:visibility="invisible"
+android:visibility="gone"
                 android:layout_alignLeft="@+id/video_upload"
                 android:layout_alignStart="@+id/video_upload"
                 app:srcCompat="@drawable/cross" />
