--- a/SocialMediaApp/app/src/main/res/values/colors.xml
+++ b/SocialMediaApp/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#5bacdf</color>
     <color name="colorPrimaryDark">#156bc1</color>
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorAccent">#0097D3</color>
 
     <color name="white">#ffffff</color>
     <color name="blue">#256487</color>
