--- a/SocialMediaApp/app/src/main/res/values/styles.xml
+++ b/SocialMediaApp/app/src/main/res/values/styles.xml
@@ -11,6 +11,10 @@
     <style name="MyCustomTabLayout" parent="Widget.Design.TabLayout">
         <item name="tabTextAppearance">@style/MyCustomTabText</item>
         <item name="tabSelectedTextColor">#fff</item>
+        <item name="tabIndicatorColor">#fff</item>
+        <item name="tabIndicatorHeight">3dp</item>
+        <item name="android:fontFamily">@font/pt_sans_web_bold</item>
+
     </style>
 
     <style name="MyCustomTabText" parent="TextAppearance.AppCompat.Button">
