--- a/SocialMediaApp/app/src/main/res/values/styles.xml
+++ b/SocialMediaApp/app/src/main/res/values/styles.xml
@@ -15,11 +15,12 @@
         <item name="tabIndicatorHeight">3dp</item>
         <item name="android:fontFamily">@font/pt_sans_web_bold</item>
 
+
     </style>
 
     <style name="MyCustomTabText" parent="TextAppearance.AppCompat.Button">
-        <item name="android:textSize">12sp</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">#036</item>
     </style>
 
@@ -92,6 +93,9 @@
         <item name="colorAccent">#0076bc</item>
     </style>
 
-
+    <style name="PopupAnimation" parent="Widget.AppCompat.PopupWindow">
+        <item name="android:windowEnterAnimation">@anim/bottom_up</item>
+        <item name="android:windowExitAnimation">@anim/bottom_down</item>
+    </style>
 
 </resources>
